# agents

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .skill-lock.json  autoresearch-lessons.md  autoresearch-state.json  lev-skills.sh  research-results.tsv  skill-graph.json  skills-state.json  sync.md
.claude/: settings.local.json
.herenow/: state.json
.lev/: config.yaml  validation-gates.yaml
_shared/: graph-footer.md
convex/: AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  tsconfig.json
diagrams/: 24h-accomplishments.html  24h-commit-recap.html  24h-recap-2026-03-12.html  24h-recap-graph-convergence.html  a2ui-protocol-consolidation.html  a2ui-vision-stack.html  agentic-synthetic-user-research.html  agentping-genui-roadmap.html  agentping-host-proof-explainer.html  ai-coding-toolkit-gap-analysis.html  autodev-retro-12h.html  bookmark-content-review-all-20260310.html  bookmark-content-wave2-20260310.html  bookmark-intake-batch-20260309.html  bookmark-post-analysis-wave1-20260309.html  bookmark-review-all-wave2-20260310.html  bookmark-review-wave1-20260309.html  bookmarks-hook-dry-run-20260309.html  cass-daily-20260322-full-explainer.html  cdo-decisions-s8.html  cdo-discoveries-s8.html  cdo-execution-trace-s8.html  conversational-router-alignment-map.html  copi-contract-truth-table.html  copi-fmea-risk-dashboard.html  copi-runtime-architecture.html  copi-session7-recap.html  cqrs-es-research-landscape.html  decision-reconciliation-s10.html  decision-reconciliation-s11.html  droid-absorption-lev-harness-plan.html  droid-transcript-visual-explainer.html  exact-deterministic-audit-control-plane.html  exact-journey-map.html  exact-persona-atlas.html  gen-ui-session-assets-and-daemon.html  genosdb-parity-explainer.html  gstack-auth-flowmind-deepdive.html  gstack-brave-live-and-flowmind-sim.html  (+39 more)
skills/research/apps/research-cli/: Cargo.toml  README.md  STATUS.md
skills/research/apps/research-cli/src/backends/: arxiv.rs  brave.rs  firecrawl.rs  hackernews.rs  perplexity.rs
skills/research/apps/research-cli/src/commands/: history.rs  search.rs
skills/research/apps/research-cli/src/widgets/: mod.rs  progress_bar.rs  source_list.rs
skills/research/apps/research-hub/src-tauri/: Cargo.toml  tauri.conf.json
skills/research/apps/research-hub/src-tauri/src/: commands.rs  research.rs
(+3889 files in other folders)
