[package]
name = "research-cli"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# FrankenTUI core dependencies (path deps for now, will become crates.io later)
ftui-core = { path = "/tmp/frankentui/crates/ftui-core" }
ftui-render = { path = "/tmp/frankentui/crates/ftui-render" }
ftui-runtime = { path = "/tmp/frankentui/crates/ftui-runtime" }
ftui-widgets = { path = "/tmp/frankentui/crates/ftui-widgets" }
ftui-style = { path = "/tmp/frankentui/crates/ftui-style" }
ftui-text = { path = "/tmp/frankentui/crates/ftui-text", features = ["markup"] }
ftui-layout = { path = "/tmp/frankentui/crates/ftui-layout" }
ftui-extras = { path = "/tmp/frankentui/crates/ftui-extras", features = ["theme", "charts", "timer"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "cargo"] }

# Async runtime for API calls
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "time", "sync", "process", "fs", "io-util"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for research API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# URL encoding for mock backend
urlencoding = "2.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crossterm for terminal control
crossterm = "0.29"

[features]
default = []

[[bin]]
name = "research"
path = "src/main.rs"
